# marko-editor

./: .gitignore  Cargo.toml  makefile  readme.md  sample.md
.cargo/: config
package/: PKGBUILD  marko-editor.desktop  marko-editor.menu  marko-editor.xpm
src/: app.rs  data.rs  gdk_glue.rs  gdk_x11_glue.rs  gtk_macros.rs  main.rs  mainwindow.rs  mainwindow.ui  res.rs  settings.rs  textbufferext.rs  textbuffermd.rs  texttag.rs  texttagmanager.rs  texttagtable.rs  textview.rs  textview.ui  textviewext.rs
