[package]
name = "marko-editor"
version = "0.1.0"
authors = ["Michael <info@marko-editor.com>"]
edition = "2018"

[features]
default = ["x11", "gdk4-x11"]

[dependencies]
reqwest = { version = "0.11.*", features = ["blocking"] }
configparser = "2.0.*"
x11 = { version = "2.18.*", optional = true }
anyhow = "1.0.*"
bitflags = "1.2.*"
log = "0.4"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
regex = "1"
lazy_static = "1.4.*"
html-escape = "0.2.*"
percent-encoding = "2.1.*"

[dependencies.gtk]
version = "0.*"
package = "gtk4"

[dependencies.gdk]
version = "0.*"
package = "gdk4"

[dependencies.gdk4-x11]
version = "0.*"
package = "gdk4-x11"
optional = true